Fixed issues on forum display on mobiles

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -1318,6 +1318,10 @@ article.node-223806{
       max-width: 58px;
     }
 
+    .comment-list ul.comment-listing li .comment-right{
+      margin: 0 0 27px 98px;
+    }
+
     .comment-list ul.comment-listing li .comment-left{
       width: 85px;
     }
